@@ -1,5 +1,6 @@
 1.4.1:
 * segway: fix --prior-strength option
+* segway: add resolution functionality for semisupervised mode
 
 1.4.0:
 * segway: added support for --num-minibatch-windows, which causes Segway
